README contains now all the instructions needed for setup

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,10 +5,10 @@
     </head>
 
     <body>
-        {% if key %}
-        <p>Hello {{key}}!</p>
+        {% if value %}
+        <p>Value: {{value}}!</p>
         {% else %}
-        <p>No key provided</p>
+        <p>No value defined!</p>
         {% endif %}
     </body>
 </html>
