Move output in console logs

--- a/templates/keys.html
+++ b/templates/keys.html
@@ -6,7 +6,7 @@
 
     <body>
         {% if key and value %}
-        <p>Value for {{key}} is {{value}}!</p>
+        <p>You should see the value for you {{key}} in the application logs!</p>
         {% elif key and not value %}
         <p>No value defined for {{key}}!</p>
         {% else %}
